fix responsive on mobile + width fit-content to 100% + Reveal on everypage

--- a/src/style/tw-blog.scss
+++ b/src/style/tw-blog.scss
@@ -35,15 +35,15 @@
 
 .featured-image {
   transform-origin: 50% 50%;
-  transition: all 1s ease-in-out;
+  transition: all .5s ease-in-out;
   filter: brightness(100%);
   border-radius: 5px;
 }
 
 .post-link:hover {
   .featured-image {
-    filter: brightness(75%);
-    transform: scale(2);
+    filter: brightness(85%);
+    transform: scale(1.33);
     border-radius: 5px;
   }
 }
