--- a/src/style/tw-custom.scss
+++ b/src/style/tw-custom.scss
@@ -151,14 +151,14 @@ $hero-bg-mix: rgba(#29042f, 0.4);
   max-width: 13rem !important;
 } */
 
-@media screen and (max-width: 768px) {
-  .category > div:nth-child(1) > div:nth-child(1) > div:nth-child(1),
-  .category > div:nth-child(2) > div:nth-child(1) > div:nth-child(1),
-  .category > div:nth-child(3) > div:nth-child(1) > div:nth-child(1),
-  .category > div:nth-child(4) > div:nth-child(1) > div:nth-child(1) {
-    max-width: 200px !important;
-  }
-}
+// @media screen and (max-width: 768px) {
+//   .category > div:nth-child(1) > div:nth-child(1) > div:nth-child(1),
+//   .category > div:nth-child(2) > div:nth-child(1) > div:nth-child(1),
+//   .category > div:nth-child(3) > div:nth-child(1) > div:nth-child(1),
+//   .category > div:nth-child(4) > div:nth-child(1) > div:nth-child(1) {
+//     max-width: 200px !important;
+//   }
+// }
 
 .category
   > div:nth-child(1)
@@ -220,9 +220,14 @@ $hero-bg-mix: rgba(#29042f, 0.4);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(25px);
-  -webkit-backdrop-filter: blur(5px);
+  // filter: blur(25px);
+  // transform: translate3d(0, 0, 0);
+  // transition: backdrop-filter 0.1ms 0.1ms;
+  @supports not (-moz-appearance: none) {
+    backdrop-filter: blur(25px);
+  }
   border: 1px solid rgba(255, 255, 255, 0.3);
-  animation: 0.1s;
+  // inset: 0 || 3%;
 }
 
 /* .pdf {
